--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="css/style.css" rel="stylesheet"/>
-    <script src="../lib/jquery-1.10.2.js" type="application/javascript"></script>
+    <script src="js/jquery-1.10.2.js" type="application/javascript"></script>
     <script src="js/jquery-guide-msg.js" type="application/javascript"></script>
 
     <style>
